--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             <h2>Plans & Pricing</h2>
             <p>Whether your time-saving automation needs are large or small, we’re here to help you scale.</p>
         </div>
-    </section>
-    <section class="subscription">
-        <div class="subscription-position">
-            <button id="monthly" class="active-subscription">monthly</button>
-            <button id="yearly">yearly</button>
+        <div class="subscription">
+            <div class="subscription-position">
+                <button id="monthly" class="active-subscription">monthly</button>
+                <button id="yearly">yearly</button>
+            </div>
         </div>
     </section>
     <section class="plans">
