--- a/index.html
+++ b/index.html
@@ -34,92 +34,105 @@
         </div>
         <div class="subscription">
             <div class="subscription-position">
-                <button id="monthly" class="active-subscription">monthly</button>
-                <button id="yearly">yearly</button>
+                <button id="monthly" class="subscription-btn active-subscription">monthly</button>
+                <button id="yearly" class="subscription-btn">yearly</button>
             </div>
         </div>
     </section>
     <section class="plans">
         <div class="plans-position">
-            <div id="starter" class="choose-plan">
-                <p class="description"><span id="starter-price">$12</span>/month</p>
-                <h3 class="description">Starter</h3>
-                <p class="description">Unleash the power of automation.</p>
-                <ul class="description-list">
-                    <li class="description">
-                        <img class="circle" src="./img/circle.svg" alt="check-circle">
-                        Multi-step Zaps
-                    </li>
-                    <li class="description">
-                        <img class="circle" src="./img/circle.svg" alt="check-circle">
-                        3 Premium Apps
-                    </li>
-                    <li class="description">
-                        <img class="circle" src="./img/circle.svg" alt="check-circle">
-                        2 Users team
-                    </li>
-                </ul>
-                <button>Choose plan</button>
-            </div>
-            <div id="professional" class="choose-plan">
-                <p class="description"><span id="professional-price">$36</span>/month</p>
-                <h3 class="description">Professional</h3>
-                <p class="description">Advanced tools to take your work to the next level.</p>
-                <ul class="description-list">
-                    <li class="description">
-                        <img class="circle" src="./img/circle.svg" alt="check-circle">
-                        Multi-step Zaps
-                    </li>
-                    <li class="description">
-                        <img class="circle" src="./img/circle.svg" alt="check-circle">
-                        Unlimited Premium Apps
-                    </li>
-                    <li class="description">
-                        <img class="circle" src="./img/circle.svg" alt="check-circle">
-                        50 Users team
-                    </li>
-                    <li class="description">
-                        <img class="circle" src="./img/circle.svg" alt="check-circle">
-                        Shared Workspace
-                    </li>
-                </ul>
-                <button>Choose plan</button>
-            </div>
-            <div id="company" class="choose-plan active-plan">
-                <div>
-                    <p>most popular</p>
+            <div id="choose-starter">
+                <div id="starter" class="choose-plan">
+                    <div>
+                        <p class="description"><span id="starter-price" class="description-price">$12</span>/month</p>
+                        <h3 class="description-title">Starter</h3>
+                        <p class="description">Unleash the power of automation.</p>
+                        <ul class="description-list">
+                            <li class="description">
+                                <img class="circle" src="./img/circle.svg" alt="check-circle">
+                                Multi-step Zaps
+                            </li>
+                            <li class="description">
+                                <img class="circle" src="./img/circle.svg" alt="check-circle">
+                                3 Premium Apps
+                            </li>
+                            <li class="description">
+                                <img class="circle" src="./img/circle.svg" alt="check-circle">
+                                2 Users team
+                            </li>
+                        </ul>
+                    </div>
+                    <button class="choose-btn">Choose plan</button>
                 </div>
-                <p class="description"><span id="company-price">$56</span>/month</p>
-                <h3 class="description">Company</h3>
-                <p class="description">Automation plus enterprise-grade features.</p>
-                <ul class="description-list">
-                    <li class="description">
-                        <img class="circle" src="./img/circle.svg" alt="check-circle">
-                        Multi-step Zap
-                    </li>
-                    <li class="description">
-                        <img class="circle" src="./img/circle.svg" alt="check-circle">
-                        Unlimited Premium Apps
-                    </li>
-                    <li class="description">
-                        <img class="circle" src="./img/circle.svg" alt="check-circle">
-                        Unlimited Users Team
-                    </li>
-                    <li class="description">
-                        <img class="circle" src="./img/circle.svg" alt="check-circle">
-                        Advanced Admin
-                    </li>
-                    <li class="description">
-                        <img class="circle" src="./img/circle.svg" alt="check-circle">
-                        Custom Data Retention
-                    </li>
-                </ul>
-                <button>Choose plan</button>
+            </div>
+            <div id="choose-professional">
+                <div id="professional" class="choose-plan">
+                    <div>
+                        <p class="description"><span id="professional-price" class="description-price">$36</span>/month</p>
+                        <h3 class="description-title">Professional</h3>
+                        <p class="description">Advanced tools to take your work to the next level.</p>
+                        <ul class="description-list">
+                            <li class="description">
+                                <img class="circle" src="./img/circle.svg" alt="check-circle">
+                                Multi-step Zaps
+                            </li>
+                            <li class="description">
+                                <img class="circle" src="./img/circle.svg" alt="check-circle">
+                                Unlimited Premium Apps
+                            </li>
+                            <li class="description">
+                                <img class="circle" src="./img/circle.svg" alt="check-circle">
+                                50 Users team
+                            </li>
+                            <li class="description">
+                                <img class="circle" src="./img/circle.svg" alt="check-circle">
+                                Shared Workspace
+                            </li>
+                        </ul>
+                    </div>
+                    <button class="choose-btn">Choose plan</button>
+                </div>
+            </div>
+            <div id="choose-company" class="active-background">
+                <div id="company" class="choose-plan active-plan">
+                    <div>
+                        <div class="most-popular">
+                            <p>most popular</p>
+                        </div>
+                        <p class="description"><span id="company-price" class="description-price">$56</span>/month</p>
+                        <h3 class="description-title">Company</h3>
+                        <p class="description">Automation plus enterprise-grade features.</p>
+                        <ul class="description-list">
+                            <li class="description">
+                                <img class="circle" src="./img/circle.svg" alt="check-circle">
+                                Multi-step Zap
+                            </li>
+                            <li class="description">
+                                <img class="circle" src="./img/circle.svg" alt="check-circle">
+                                Unlimited Premium Apps
+                            </li>
+                            <li class="description">
+                                <img class="circle" src="./img/circle.svg" alt="check-circle">
+                                Unlimited Users Team
+                            </li>
+                            <li class="description">
+                                <img class="circle" src="./img/circle.svg" alt="check-circle">
+                                Advanced Admin
+                            </li>
+                            <li class="description">
+                                <img class="circle" src="./img/circle.svg" alt="check-circle">
+                                Custom Data Retention
+                            </li>
+                        </ul>
+                    </div>
+                    <button class="choose-btn">Choose plan</button>
+                </div>
             </div>
         </div>
     </section>
 
-    <script src="./js/active.js"></script>
+    <script src="./js/active-period.js"></script>
+    <script src="./js/active-plan.js"></script>
 </body>
 
 </html>
